--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.4.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-pdf/renderer": "^3.4.2",
+    "aws4": "^1.13.0",
     "canvg": "^4.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -24,7 +26,10 @@
     "framer-motion": "^11.0.23",
     "geist": "^1.3.0",
     "lucide-react": "^0.364.0",
+    "mongodb": "^6.8.0",
+    "mongodb-client-encryption": "^6.0.1",
     "next": "latest",
+    "next-auth": "^5.0.0-beta.19",
     "react": "latest",
     "react-day-picker": "^8.10.0",
     "react-dom": "latest",
